--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "axios": "^0.18.0",
+    "element-ui": "^2.4.8",
+    "moment": "^2.22.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
