--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "element-ui": "^2.4.8",
     "moment": "^2.22.2",
